--- a/index.html
+++ b/index.html
@@ -10,16 +10,17 @@
 </head>
 <body>
     <h1>CALCULATOR</h1>
-    <div class="container" id="demo">
-        <div class="block" id="display">
+    <h6>Made by Vinayak</h6>
+    <div class="container" >
+        <div  id="display">
             
     </div>
-    <div class="blocks">
+
        <div class="buttons">
            <div class="button">C</div>
            <div class="button">/</div>
            <div class="button">*</div>
-           <div class="button"><-</div>
+           <div class="button"> <=</div>
            <div class="button">7</div>
            <div class="button">8</div>
            <div class="button">9</div>
@@ -35,10 +36,10 @@
            <div class="button">(</div>
            <div class="button">0</div>
            <div class="button">)</div>
-           <div class="button">=</div>
+           <div class="button" id="eq">=</div>
            <div class="button"></div>
        </div>
-    </div>
+    
     </div>
 </body>
 <script src="index.js"> </script>
